--- a/http-server/project.html
+++ b/http-server/project.html
@@ -8,6 +8,6 @@
 <body>
    <h1>Projects</h1>
    <h3>Project List</h3>
-   <a href="/">&lt;- Back to home</a>
+   <a href="./registration">&lt; registration page</a>
 </body>
 </html>
