--- a/http-server/project.html
+++ b/http-server/project.html
@@ -9,5 +9,6 @@
    <h1>Projects</h1>
    <h3>Project List</h3>
    <a href="./registration">registration page</a>
+    <a href="./home">back to home page</a>
 </body>
 </html>
