--- a/http-server/registration.html
+++ b/http-server/registration.html
@@ -97,6 +97,18 @@
             <div class="mx-auto">
                 <h2 class="="text-3xl text-center font-bold leading-tight>Entries</h2>
                 <div class="divide-y divide-gray-300/50" id="user-entries"></div>
+                 <div class="parts" id="tableView">
+          
+            <table class="table">
+                <tr class="bor">
+                    <th class="bor">Name</th>
+                    <th class="bor">Email</th>
+                    <th class="bor">Password</th>
+                    <th class="bor">Dob</th>
+                    <th class="bor">Accepted terms?</th>
+                </tr>
+            </table>
+        </div>
             </div>
         </div>
     </div>
